--- a/app/templates/fancoolindex.html
+++ b/app/templates/fancoolindex.html
@@ -498,6 +498,13 @@ window.APP_CONFIG = {
   maxItems: {{ max_chart_items }}
 };
 </script>
-<script src="{{ url_for('static', filename='js/fancool.js') }}"></script>
+<script src="{{ url_for('static', filename='js/core.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/color.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/chart.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/layout.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/state-ui.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/main.js') }}"></script>
+  <!-- 兼容 stub（最后） -->
+  <script src="{{ url_for('static', filename='js/fancool.js') }}"></script>
 </body>
 </html>
