--- a/app/templates/fancoolindex.html
+++ b/app/templates/fancoolindex.html
@@ -500,6 +500,7 @@ window.APP_CONFIG = {
   maxItems: {{ max_chart_items }}
 };
 </script>
+<script src="{{ url_for('static', filename='js/debug_panel.js') }}"></script>
 <script src="{{ url_for('static', filename='js/local_state.js') }}"></script>
 <script src="{{ url_for('static', filename='js/fancool.js') }}"></script>
 </body>
