--- a/app/templates/fancoolindex.html
+++ b/app/templates/fancoolindex.html
@@ -117,7 +117,7 @@
         <i class="fa-solid fa-moon" id="themeIcon"></i>
       </div>
 
-      <div class="flex flex-col lg:flex-row gap-6 mb-8">
+      <div id="main-panels" class="flex flex-col lg:flex-row gap-6 mb-8">
         <!-- 左侧添加 / 搜索区域 -->
         <div class="bg-white rounded-xl shadow-md p-6 lg:w-1/3">
           <nav class="tab-nav" data-tab-group="left-panel">
