--- a/app/templates/fancoolindex.html
+++ b/app/templates/fancoolindex.html
@@ -175,7 +175,7 @@
                   </div>
 
                   <div class="fc-form-row">
-                    <button type="submit" class="w-full fc-btn fc-btn-- fc-btn----" style="font-size: 16px;">添加至图表</button>
+                    <button type="submit" class="w-full fc-btn fc-btn--success" style="font-size: 16px;">添加至图表</button>
                   </div>
                 </form>
               </div>
