--- a/app/templates/fancoolindex.html
+++ b/app/templates/fancoolindex.html
@@ -122,7 +122,7 @@
         <div class="bg-white rounded-xl shadow-md p-6 lg:w-1/3">
           <nav class="fc-tabs" data-tab-group="left-panel">
             <div class="fc-tabs__item active" data-tab="add-by-model">按型号添加</div>
-            <div class="fc-tabs__item" data-tab="filter-by-scenario">按负载场景筛选</div>
+            <div class="fc-tabs__item" data-tab="filter-by-scenario">按工况筛选</div>
           </nav>
           <div class="fc-tab-container" id="left-panel-container">
             <div class="fc-tab-wrapper" id="left-panel-wrapper">
@@ -180,7 +180,7 @@
                 </form>
               </div>
 
-              <!-- 按负载场景筛选 -->
+              <!-- 按工况筛选 -->
               <div class="fc-tab-pane" id="filter-by-scenario-pane">
                 <form id="searchForm" class="fc-form-grid">
                   <div class="fc-form-row">
@@ -295,7 +295,7 @@
                           <th>品牌</th>
                           <th>型号</th>
                           <th>尺寸</th>
-                          <th>热门负载场景</th>
+                          <th>热门工况</th>
                           <th>查询次数</th>
                           <th class="add-header">添加</th>
                         </tr>
@@ -354,7 +354,7 @@
                           <th>品牌</th>
                           <th>型号</th>
                           <th>尺寸</th>
-                          <th>热门负载场景</th>
+                          <th>热门工况</th>
                           <th>好评次数</th>
                           <th class="add-header">添加</th>
                         </tr>
@@ -389,9 +389,9 @@
                           <th>品牌</th>
                           <th>型号</th>
                           <th>尺寸</th>
-                          <th>负载场景</th>
+                          <th>工况</th>
                           <th>风量(CFM)</th>
-                          <th>场景好评数</th>
+                          <th>工况好评数</th>
                           <th class="add-header">添加</th>
                         </tr>
                         </thead>
@@ -410,9 +410,9 @@
                           <th>品牌</th>
                           <th>型号</th>
                           <th>尺寸</th>
-                          <th>负载场景</th>
+                          <th>工况</th>
                           <th>风量(CFM)</th>
-                          <th>场景好评数</th>
+                          <th>工况好评数</th>
                           <th class="add-header">添加</th>
                         </tr>
                         </thead>
