--- a/app/templates/source-info.html
+++ b/app/templates/source-info.html
@@ -92,11 +92,11 @@
         <figcaption>冷排（厚度 27mm）</figcaption>
       </figure>
       <figure>
-        <img src="/static/imgs/多孔板(40%穿孔率).jpg" alt="多孔板(40%穿孔率)">
+        <img src="/static/imgs/多孔板(40穿孔率).jpg" alt="多孔板(40%穿孔率)">
         <figcaption>多孔板（40% 穿孔率）</figcaption>
       </figure>
       <figure>
-        <img src="/static/imgs/尼龙网(65%通风率).jpg" alt="尼龙网(65%通风率)">
+        <img src="/static/imgs/尼龙网(65通风率).jpg" alt="尼龙网(65%通风率)">
         <figcaption>尼龙网（65% 通风率）</figcaption>
       </figure>
     </div>
