后端拟合生成

--- a/app/templates/fancoolindex.html
+++ b/app/templates/fancoolindex.html
@@ -390,6 +390,7 @@
                           <th>型号</th>
                           <th>尺寸</th>
                           <th>工况</th>
+                          <th class="nowrap" id="searchXHeaderAir">转速</th>
                           <th>风量(CFM)</th>
                           <th>工况好评数</th>
                           <th class="add-header">添加</th>
@@ -411,6 +412,7 @@
                           <th>型号</th>
                           <th>尺寸</th>
                           <th>工况</th>
+                          <th class="nowrap" id="searchXHeaderLikes">转速</th>
                           <th>风量(CFM)</th>
                           <th>工况好评数</th>
                           <th class="add-header">添加</th>
