图表拟合逻辑更新

--- a/app/templates/fancoolindex.html
+++ b/app/templates/fancoolindex.html
@@ -268,7 +268,7 @@
             已执行查询<span id="query-count">0</span>次
           </div>
           <nav class="fc-tabs with-subseg" fc-tabs--with-subseg data-tab-group="right-panel">
-            <div class="fc-tabs__item active" data-tab="top-queries">近期热门查询</div>
+            <div class="fc-tabs__item active" data-tab="top-queries">近期热门</div>
             <div class="fc-tabs__item" data-tab="search-results">搜索结果</div>
             <div class="flex-1"></div>
             <div class="fc-tabs__subseg" id="rightSubsegContainer"></div>
