--- a/app/templates/fancoolindex.html
+++ b/app/templates/fancoolindex.html
@@ -483,6 +483,8 @@
   </main>
   
   <script src="{{ url_for('static', filename='js/local-state.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/sidebar.js') }}"></script>
   <script src="{{ url_for('static', filename='js/fancool.js') }}"></script>
+  
 </body>
 </html>
