--- a/app/templates/fancoolindex.html
+++ b/app/templates/fancoolindex.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
 <head>
   <link rel="icon" type="image/png" href="/static/logo.png">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/tailwind.css') }}">
   <script>
     (function () {
       const savedTheme = localStorage.getItem('theme');
@@ -17,7 +18,6 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
   <title>风扇库</title>
 
-  <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
