--- a/app/templates/fancoolindex.html
+++ b/app/templates/fancoolindex.html
@@ -485,6 +485,7 @@
   
   <script src="{{ url_for('static', filename='js/local-state.js') }}"></script>
   <script src="{{ url_for('static', filename='js/sidebar.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/features/recently-removed.js') }}"></script>
   <script src="{{ url_for('static', filename='js/fancool.js') }}"></script>
   
 </body>
