--- a/app/templates/fancoolindex.html
+++ b/app/templates/fancoolindex.html
@@ -22,7 +22,8 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/fancool.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/fancool.css', v=2) }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/right-card.css', v=2) }}">
 </head>
 <body class="bg-gray-50 min-h-screen">
   <div id="toastContainer"></div>
@@ -403,7 +404,7 @@
                         </tr>
                         </thead>
                         <tbody id="searchAirflowTbody">
-                          <tr><td colspan="7" class="text-center text-gray-500 py-8">使用左侧条件进行搜索</td></tr>
+                          <tr><td colspan="8" class="text-center text-gray-500 py-8">使用左侧条件进行搜索</td></tr>
                         </tbody>
                       </table>
                     </div>
@@ -425,7 +426,7 @@
                         </tr>
                         </thead>
                         <tbody id="searchLikesTbody">
-                          <tr><td colspan="7" class="text-center text-gray-500 py-8">使用左侧条件进行搜索</td></tr>
+                          <tr><td colspan="8" class="text-center text-gray-500 py-8">使用左侧条件进行搜索</td></tr>
                         </tbody>
                       </table>
                     </div>
